1.0.2 - Can set tasks to all-day / Task geometry fixed to not be too big

--- a/data/stylesheet.css
+++ b/data/stylesheet.css
@@ -4,21 +4,27 @@
 }
 
 .tt-column {
-    background-color: #fafafa;
-    border: 1px solid #ccc;
+    background-color: @bg_color;
+    background-image: linear-gradient(
+        to bottom,
+        shade(@bg_color, 1.5),
+        @base_color
+        );
+    border: 1px solid alpha(#000, 0.25);
 }
 
 .tt-button {
     background-image: linear-gradient(
         to bottom,
-        #fcffff,
-        #f0f3f3
+        #faffff,
+        #f0f5f5
         );
-    border: 1px solid #ccc;
+    border: 1px solid alpha(#000, 0.25);
     border-radius: 8px;
+    -gtk-icon-shadow: alpha(#000, 0.25);
 }
 .tt-button image {
-    color: #555;
+    color: #444;
     -gtk-icon-shadow: none;
     border-image-width: 0;
     box-shadow: transparent;
@@ -32,23 +38,23 @@
 .tt-button:active {
     background-image: linear-gradient(
         to bottom,
-        #f0f3f3,
-        #fcffff
+        #f0f5f5,
+        #faffff
         );
 }
 
 .color-button {
     border-radius: 50%;
     background-image: none;
-    border: 1px solid alpha(#333, 0.3);
+    border: 1px solid alpha(#000, 0.25);
     box-shadow:
         inset 0 1px 0 0 alpha (@inset_dark_color, 0.7),
         inset 0 0 0 1px alpha (@inset_dark_color, 0.3),
-        0 1px 0 0 alpha (@bg_highlight_color, 0.3);
+        0 0 0 0 transparent;
 }
 .color-button:hover,
 .color_button:focus {
-    border: 1px solid #333;
+    border: 1px solid alpha(#000, 0.5);
 }
 .color-white {
     background-color: #fafafa;
@@ -60,7 +66,7 @@
     background-color: #ffc27d;
 }
 .color-yellow {
-    background-color: #fff394;
+    background-color: #ffe16b;
 }
 .color-green {
     background-color: #d1ff82;
@@ -68,6 +74,6 @@
 .color-blue {
     background-color: #8cd5ff;
 }
-.color-indigo {
+.color-violet {
     background-color: #aca9fd;
 }
